# unhx

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HISTORY.md  README  README.md  TASKS.md  flake.nix  serial_debug.txt  serial_final.txt  serial_poll.txt  serial_step11.txt  serial_step11b.txt  styles.css  test-fork.sh  test_device_boot.py  test_disk_io.py  test_fork_debug.py  test_framebuffer.sh  test_network.sh  test_simple_disk.sh
.cache/clangd/index/: boot.S.0BFEFE7641E42247.idx  bootstrap.c.A832059A607065AE.idx  bootstrap.h.99A301BD5C7E5287.idx  context_switch.S.CAC0E96B1E45AB60.idx  gdt.c.00F7984A9B59F4E2.idx  gdt.h.FF6805E9A47E17C8.idx  ipc.c.DB6130609A1B2230.idx  ipc.h.69383636C1F63541.idx  ipc_entry.h.4B560067CF5F1B24.idx  ipc_kmsg.c.9FEF4C8DAB1BE766.idx  ipc_kmsg.h.A449376E3770860D.idx  ipc_mqueue.c.8C52F231DDC2A169.idx  ipc_mqueue.h.62D43F6704E8AAF8.idx  ipc_port.h.1D9A789675178FC3.idx  ipc_space.h.D7B81074CB764782.idx  kalloc.c.D09115EAEAB55CA5.idx  kalloc.h.C9ADD35C60E81F8A.idx  kern.c.00B30F09C41747F9.idx  kern.h.2D1FB1D5A1D268D5.idx  kernel_task.c.B03332B205D33ACF.idx  kernel_task.h.8A6DC246B8DAAB93.idx  klib.c.FBDCB83EAA51DBF6.idx  klib.h.6E73BBABE20EC115.idx  mach_types.h.C3B601748ACC2862.idx  paging.c.00CA00FE53B7AAE6.idx  paging.h.8BBE5A626117EB83.idx  platform.c.0FD46D6B9B1CF3BE.idx  platform.h.EE9E4F1E8E7C611E.idx  registry.c.2C4B5A12BEDC3600.idx  sched.c.6E60C13F5CEC8126.idx  sched.h.7C61D73DCFA7A462.idx  task.c.259DB77B5C5CB648.idx  task.h.1A61BF48A18155D5.idx  thread.c.CF5DFA05D9D920D9.idx  thread.h.203B787FF5165069.idx  vm.c.258668D399AE3F82.idx  vm.h.44B08DADA7A13E67.idx  vm_map.h.4297C1565BD542BF.idx  vm_page.c.F326753AEA070B3F.idx  vm_page.h.AF1D708B4F60D149.idx
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: rfc_lint.py  rfc_sync_issues.py
.github/workflows/: boot-test.yml  deploy-gh-pages.yml  rfc-process.yml
archive/: README.md
archive/cmu-mach/: README.md
archive/next-docs/: README.md
archive/osf-mk/: README.md
archive/utah-oskit/: README.md
cmake/: aarch64-elf-clang.cmake  x86_64-elf-clang.cmake
docs/: DISK_IO_SUMMARY.md  README.md  SESSION_SOURCE_ARCHAEOLOGY.md  UNHOX Project Proposal.docx  ai-copilot-neomach.txt  ai-copilot-unhox.txt  ai-copilot-unhu.txt  architecture.md  audio-server-design.md  bsd-server-design.md  build-setup.md  developer-guide.md  display-server-architectures.md  display-server-survey.md  future.md  graphics-pipeline-microkernel.md  ipc-design.md  kernel-architecture.md  kernel-heritage.md  roadmap.md  sources.md  use-cases.md
docs/research/: ipc-performance.md
docs/rfcs/: README.md  RFC-0000-template.md  RFC-0001-ipc-message-format.md  RFC-0002-audio-subsystem.md  RFC-0002-display-server-alternatives.md  RFC-0002-display-server-architecture.md  RFC-0002-kernel-verification.md  RFC-0005-audio-subsystem.md
frameworks/: CMakeLists.txt  README.md
frameworks/AppKit-backend/: README.md  appkit_backend.c  appkit_backend.h
frameworks/DisplayServer/: README.md  display_server.c  display_server.h  dps_msg.h
frameworks/libdispatch-unhx/: README.md  blocks_runtime.c  blocks_runtime.h  dispatch.h  dispatch_group.c  dispatch_queue.c
kernel/: CMakeLists.txt  README.md  linker-aarch64.ld  linker.ld
kernel/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
kernel/device/: DISK_IO.md  DISPLAY_DRIVERS.md  README.md  VIRTIO_NET.md  ahci.c  ahci.h  framebuffer.c  framebuffer.h  keyboard.c  keyboard.h  mouse.c  mouse.h  pci.c  pci.h  vga_text.c  vga_text.h  virtio.h  virtio_blk.c  virtio_blk.h  virtio_net.c  virtio_net.h
kernel/include/mach/: mach_types.h
kernel/ipc/: README.md  ipc.c  ipc.h  ipc_entry.h  ipc_kmsg.c  ipc_kmsg.h  ipc_mqueue.c  ipc_mqueue.h  ipc_port.h  ipc_right.c  ipc_right.h  ipc_space.h  mach_msg.c  mach_msg.h
kernel/kern/: README.md  elf.h  elf_load.c  elf_load.h  kalloc.c  kalloc.h  kern.c  kern.h  kernel_task.c  kernel_task.h  klib.c  klib.h  multiboot.h  sched.c  sched.h  syscall.c  syscall.h  task.c  task.h  thread.c  thread.h  zalloc.c  zalloc.h
kernel/platform/: README.md  boot.S  context_switch.S  gdt.c  gdt.h  idt.c  idt.h  ioport.h  irq.c  irq.h  isr.S  paging.c  paging.h  pic.c  pic.h  platform.c  platform.h
kernel/platform/aarch64/: README.md  boot.S  context_switch.S  platform.c
kernel/platform/x86_64/: README.md
kernel/tests/: ipc_perf.c  ipc_perf.h  ipc_test.c  ipc_test.h
kernel/vm/: README.md  vm.c  vm.h  vm_fault.c  vm_fault.h  vm_map.c  vm_map.h  vm_object.c  vm_object.h  vm_page.c  vm_page.h
servers/: README.md
servers/auth/: README.md
servers/bootstrap/: README.md  bootstrap.c  bootstrap.h  bootstrap_ipc.c  bootstrap_ipc.h  registry.c
servers/bsd/: README.md  bsd_msg.h  bsd_proto.h  bsd_server.c  bsd_server.h  fd_table.c  fd_table.h  proc.c  proc.h  signal.c  signal.h
servers/device/: README.md
servers/display/: README.md
servers/display/wayland/: README.md
servers/display/x11/: README.md
servers/network/: README.md
servers/vfs/: README.md  ramfs.c  ramfs.h  vfs_msg.h  vfs_server.c
servers/workspace/: workspace.c
tests/: README.md
tests/bsd/: bsd_server_test.c  bsd_server_test.h
tests/integration/boot/: boot_test.sh
tests/integration/phase5/: phase5_test.sh
tests/ipc/: ipc_ool_test.c  ipc_ool_test.h  ipc_perf.c  ipc_perf.h  ipc_port_transfer_test.c  ipc_port_transfer_test.h  ipc_roundtrip_test.c  ipc_roundtrip_test.h  ipc_timeout_test.c  ipc_timeout_test.h
tools/: README.md  debug-qemu.sh  mirror-archives.sh  qemu-run.sh  quick-exec-test.sh  run-exec-test.sh  run-qemu.sh  test-exec-simple.sh  test-shell.sh
tools/cross/: README.md
user/: CMakeLists.txt  linker.ld
user/init/: init.c
user/libc/: CMakeLists.txt  assert.h  mach_msg.c  mach_msg.h  malloc.c  malloc.h  start.S  stdio.c  stdio.h  string.c  string.h  syscall.h  thread.c  thread.h
user/sh/: sh.c
user/tests/: test_dispatch.c  test_objc.c
user/workspace/: README.md  workspace.c
website/: index.html  script.js
